# EnclaveRaft

./: .gitignore  CMakeLists.txt  README.md  run.sh
attestation/untrusted/: main.cxx
client/: RequestBuilder.hxx  SocketClient.hxx  aes_gcm.cxx  aes_gcm.hxx  archive.cxx  bench_generator.py  client.cxx  client.hxx  client_crypto.cxx  client_crypto.hxx  utils.cxx  utils.hxx
cmake/: FindSGX.cmake
common/: aes_ctr_crypto.cxx  aes_ctr_crypto.hxx  common.hxx  log_level.hxx  messages.hxx  openssl_exception.hxx  unquote.hxx  url_decode.cxx  url_decode.hxx
od_attestation/: od_attestation.edl
od_attestation/trusted/: attestation_manager.cxx  attestation_manager.hxx  cert_utils.cxx  cert_utils.hxx  od_attestation_trusted.cxx  od_attestation_trusted.hxx
od_attestation/untrusted/: od_attestation_untrusted.cxx
raft_app/: raft_app.cpp
raft_app/ias_request/: ias_request.cxx  intel_ias.hxx  ssl_client.hxx
raft_app/port/: asio_log_utils.cxx  asio_log_utils.hxx  asio_rpc_client.cxx  asio_rpc_client.hxx  asio_rpc_listener.cxx  asio_rpc_listener.hxx  asio_rpc_session.hxx  asio_task_scheduler.cxx  get_time_milliseconds.cxx  logger_port.cxx  rpc_session.hxx
raft_app/sgx_utils/: CMakeLists.txt
raft_app/system/: enclave_quote.cxx  enclave_quote.hxx  intel_ias.hxx  public_message.hxx  ssl_client.hxx
raft_enclave/: raft_enclave.cpp  raft_enclave.edl  raft_enclave.hxx  raft_enclave_private.pem
raft_enclave/app_impl/: echo_state_machine.hxx  in_memory_log_store.hxx  in_memory_state_mgr.hxx  port.cxx
raft_enclave/log_store/: in_memory_state_mgr.hxx
raft_enclave/port/: crypto.cxx  crypto.hxx  logger_port.cxx  logger_port.hxx  msg_serializer.cxx  msg_serializer.hxx  rpc_client_port.cxx  rpc_client_port.hxx  rpc_listener_port.cxx  rpc_listener_port.hxx  service_port.cxx  service_port.hxx
raft_enclave/raft/include/: cluster_config.hxx  context.hxx  cornerstone.hxx  peer.hxx  raft_exception.hxx  raft_params.hxx  raft_server.hxx  srv_config.hxx  srv_state.hxx  state_machine_interface.hxx  state_mgr_interface.hxx
raft_enclave/raft/include/async_task/: delayed_task.hxx  delayed_task_scheduler_interface.hxx  timer_task.hxx
raft_enclave/raft/include/contribution/: log_entry.hxx  log_store_interface.hxx  log_val_type.hxx  snapshot.hxx  snapshot_sync_ctx.hxx  snapshot_sync_req.hxx
raft_enclave/raft/include/rpc/: async_result.hxx  msg_base.hxx  msg_type.hxx  req_msg.hxx  resp_msg.hxx  rpc_client_factory_interface.hxx  rpc_client_interface.hxx  rpc_exception.hxx  rpc_listener_interface.hxx
raft_enclave/raft/include/utils/: basic_types.hxx  buffer.hxx  logger.hxx  ptr.hxx  strfmt.hxx
raft_enclave/raft/include/workaround/: random.hpp
raft_enclave/raft/src/: buffer.cxx  cluster_config.cxx  msg_type.cxx  peer.cxx  raft_server.cxx  raft_server_handle_req.cxx  raft_server_handle_resp.cxx  raft_server_handler.cxx  raft_server_handler_timeout.cxx  raft_server_public.cxx
raft_enclave/system/: attestation_utils.cxx  cert_utils.cxx  cert_utils.hxx  key_store.cxx  key_store.hxx  message.hxx
